Remove unused lines; refactor